Post-v20.06.0
--------------------------

OVN v20.06.0
--------------------------
   - Added support for external_port_range in NAT table.
   - ovn-controller no longer monitor the external_ids column from
     the Chassis table. This was done to avoid having to do a flow
     recalculation every time external systems wrote to this column. The
     chassis configuration has now being moved to a new column called
     "other_config". As a note, the configurations are still be written to
     the external_ids column (but no longer triggers an alert) to
     keep the backward compatibility with current systems that may be
     reading it from that column but, this behavior will be removed
     in the future.
   - Added IPv6 Prefix Delegation support in OVN.
   - OVN now uses OpenFlow 1.5.
   - Added support to choose selection methods - dp_hash or
     hash (with specified hash fields) for OVN load balancer
     backend selection. This is incompatible with older versions.
     Care should be taken while upgrading as the existing
     load balancer traffic will be affected if ovn-controllers
     are not stopped before uprading northd services.
   - Added limited support for logical switches with multiple localnet ports.
     The feature requires that no chassis has two or more physical networks
     with localnet ports that belong to the same logical switch mapped. Routing
     between the ports to be implemented by fabric.

   - OVN Interconnection:
     * Support for L3 interconnection of multiple OVN deployments with tunnels
       managed by OVN.  See instructions in
       Documentation/tutorials/ovn-interconnection.rst.


OVN v20.03.0 - 04 Feb 2020
--------------------------
   - OVN was split out from the OVS repository and is now released
     independently.
   - Added IPv6 NAT support for OVN routers.
   - Added Stateless Floating IP support in OVN.
   - Added Forwarding Group support in OVN.
   - Added support for MLD Snooping and MLD Querier.